# WizFi360_EVB_PICO_AWS_controlling_LED

./: .gitmodules  CMakeLists.txt  README.md  getting_started.md  wizfi360_evb_pico_aws_c-patch.cmake  wizfi360_evb_pico_aws_c_sdk_version.cmake
examples/: CMakeLists.txt
examples/aws_mqtt_demo/: CMakeLists.txt  README.md  aws_mqtt_demo.c  iot_demo.c  mqtt_certificate.h  socket_startup.c
libraries/: CMakeLists.txt
libraries/CMSIS-FreeRTOS/CMSIS/RTOS2/FreeRTOS/Source/: cmsis_os2.c
port/: CMakeLists.txt
port/aws-iot-device-sdk-embedded-C/inc/: core_mqtt_config.h  http_transport_interface.h  mqtt_transport_interface.h  ssl_transport_interface.h
port/aws-iot-device-sdk-embedded-C/src/: mqtt_transport_interface.c  ssl_transport_interface.c  timer_interface.c
